# market-data

./: .gitignore  README.md  pyproject.toml
docs/: kline_candlestick_data.md
docs/research/: funding_strategy_simulation.md
notebooks/binance/: funding_rate.ipynb
src/market_data/: __init__.py  __main__.py
src/market_data/connectors/binance/: client.py  klines.py
src/market_data/core/: config.py
src/market_data/models/: candle.py
src/market_data/transform/: candles.py
src/market_data/utils/: utils.py
