[project]
name = "market-data"
version = "0.1.0"
description = "Market data utilities"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "binance-sdk-derivatives-trading-usds-futures>=10.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[project.scripts]
market-data = "market_data.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"